--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=authify
+spring.datasource.url=jdbc:mysql://localhost:3306/authify_app
 spring.datasource.username=root
 spring.datasource.password=Vihaan@12345
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
