--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/authify_app
 spring.datasource.username=root
 spring.datasource.password=Vihaan@12345
 spring.jpa.hibernate.ddl-auto=update
+
 spring.profiles.active=dev
+
+jwt.secret.key=secretkeyforuserdetailsauthenticationandvalidation
+
+server.servlet.context-path=/api/v1.0
